[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/misc/pickable.gd" type="Script" id=1]
[ext_resource path="res://asset/img/misc/treasure_chest.res" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "close_chest"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("img:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("img/glitter:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("snd:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("img:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("img/glitter:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("snd:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "select"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("img:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("img/glitter:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("snd:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="AudioStreamSample" id=4]

[sub_resource type="CircleShape2D" id=5]
radius = 32.0

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 6, 4, 0 )
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
angular_velocity = 1.26117e-43
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 2.0
color = Color( 0.960784, 0.854902, 0.443137, 1 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10.5, -8.5 )

[node name="pickable" type="Node2D"]
script = ExtResource( 1 )

[node name="timer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true

[node name="tween" type="Tween" parent="."]

[node name="anim" type="AnimationPlayer" parent="."]
anims/close_chest = SubResource( 1 )
anims/open_chest = SubResource( 2 )
anims/select = SubResource( 3 )

[node name="snd" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 4 )

[node name="sight" type="Area2D" parent="."]
position = Vector2( 0, -6 )
collision_layer = 0
collision_mask = 2

[node name="distance" type="CollisionShape2D" parent="sight"]
shape = SubResource( 5 )

[node name="img" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -8 )
hframes = 3

[node name="glitter" type="Particles2D" parent="img"]
use_parent_material = true
position = Vector2( 0, -12 )
emitting = false
amount = 12
explosiveness = 0.25
process_material = SubResource( 6 )

[node name="select" type="TouchScreenButton" parent="."]
position = Vector2( -1, -9 )
shape = SubResource( 7 )
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
[connection signal="tween_completed" from="tween" to="." method="_on_tween_completed"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_finished"]
[connection signal="finished" from="snd" to="." method="_on_snd_finished"]
[connection signal="area_entered" from="sight" to="." method="_on_sight_area_entered"]
[connection signal="area_exited" from="sight" to="." method="_on_sight_area_exited"]
[connection signal="pressed" from="select" to="." method="_on_select_pressed"]
